Cleaned up esri post

--- a/content/post/esri_rest.Rmd
+++ b/content/post/esri_rest.Rmd
@@ -9,7 +9,7 @@ tags: ["R Markdown", "R", "APIs", "Spatial Data", "Leaflet", "Esri"]
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
-There is a massive amount of spatial data available through Esri REST APIs.  It is a popular publishing format for federal, state, and county governments meaning that many of these data fall within the public domain.  At the time of writing this there are 7266 datasets published on data.gov available through Esri REST APIs.  Many of these data are also available for download via other formats such as Geodatabase, shape, and zipped files.  An advantage of learning to use Esri REST services over these other formats is that a user may filter their data prior to storing it locally, limiting download size and required data cleaning/filtering.  User's may also go on to implement use of these APIs within programs and scripts.  Another advantage of utilizing Esri REST platforms is that they are available to non Esri clients (i.e. avoiding costly subscription fees surrounding ArcGIS and other Esri software).  Throughout this tutorial we will be exploring how to query, clean, and map spatial data describing administrative forest boundaries. These data were published by the U.S. Forest Service.
+There is a massive amount of spatial data available through Esri REST APIs.  It is a popular publishing format for federal, state, and county governments meaning that many of these data fall within the public domain.  At the time of writing this there are 7266 datasets published on data.gov available through Esri REST APIs.  Many of these data are also available for download via other formats such as Geodatabase, shape, and zipped files.  An advantage of learning to use Esri REST services over these other formats is that a user may filter their data prior to storing it locally, limiting download size and required data cleaning/filtering.  Users may also go on to implement use of these APIs within programs and scripts.  Another advantage of utilizing Esri REST platforms is that they are available to non Esri clients allowing users to avoid costly subscription fees surrounding ArcGIS and other Esri software.  Throughout this tutorial we will be exploring how to query, clean, and map spatial data describing administrative forest boundaries. These data were published by the U.S. Forest Service.
 
 It may surprise you to learn that it is often more challenging to navigate to the Rest API than to query it, especially for new users.  Just for the sake of making this tutorial applicable to other Esri REST APIs, we will go through the initial steps of locating these resources.
 
@@ -20,10 +20,10 @@ You should see a pane titled Map Services which looks like the following:
 
 ![](/post/esri_rest_files/map-services.png)
 
-Click the 'here' hyperlink and this will take you to a folder containing a collection of REST services published by the U.S. Forest Service.  Feel free to browse around and explore all the available data sets here!  When you are ready, select #EDW/EDW_ForestSystemBoundaries_01
+Click the 'here' hyperlink and this will take you to a folder containing a collection of REST services published by the U.S. Forest Service.  Feel free to browse around and explore all the available data sets here!  When you are ready, select **EDW/EDW_ForestSystemBoundaries_01**
 , which should be roughly a third of the way down.  This will navigate you to the directory containing the data layers we are interested in for this tutorial.  If you'd like you can select ArcGIS Online Map Viewer near the top of the page to further explore our data layers on a map.  This is a great tool to explore the different fields within your data which will inform your query.
 
-Moving forward, select the Administrative Forest Boundaries - National Extent (0) layer and scroll to the bottom of the page and select Query.  This will bring you to a page in which you can practice querying the REST API within the context of your browser.  Each field you see here represents a parameter within a query URL made to the relevant API.  This page is your friend.  Seriously.  If you're attempting to implement use of an Esri REST API within an R script it is extremely helpful to have a steril and easy-to-read environment to play with different parameters in your query.
+Moving forward, select the **Administrative Forest Boundaries - National Extent (0)** layer and scroll to the bottom of the page and select Query.  This will bring you to a page in which you can practice querying the REST API within the context of your browser.  Each field you see here represents a parameter within a query URL made to the relevant API.  This page is your friend.  Seriously.  If you're attempting to implement the use of an Esri REST API within an R script it is extremely helpful to have a steril and easy-to-read environment to play with different parameters in your query.
 We'll begin querying via the 'Where' parameter.  If you have any experience with SQL this should be fairly straightforward as the 'Where' parameter takes a SQL WHERE clause as it's argument.  If not, we will give you the tools you need to begin constructing simple WHERE clauses.
 
 WHERE clauses are used to obtain an occurence(s) within a data set where a certain field is equal to a given value.  The general format is:
@@ -41,7 +41,7 @@ FORESTNAME = 'Angeles National Forest'
 
 into the WHERE field.  
 
-Enter an asterisk (*) into the Out Fields parameter.  This indicates to return all fields within the dataset.  Hit Query (GET) at the bottom of the page and you should see some HTML describing an entry within the dataset appear at the base of your window.  Horray!  You have successfully queried an Esri REST API!
+Enter an asterisk (\*)into the Out Fields parameter.  This indicates to return all fields within the dataset.  Hit **Query (GET)** at the bottom of the page and you should see some HTML describing an entry within the dataset appear at the base of your window.  Horray!  You have successfully queried an Esri REST API!
 
 Moving forward, let's generalize this WHERE clause just a bit.  For instance, let's say you aren't quite certain about the name of the national forest polygon you're interested in obtaining.  Or, better yet, let's say you're implementing this query within a program which takes in user input describing which national forest polygon to request, however you can't depend on your users to enter a full or exact forest name.  Try:
 
@@ -49,11 +49,11 @@ Moving forward, let's generalize this WHERE clause just a bit.  For instance, le
 FORESTNAME LIKE '%Tahoe National%'
 ```
 
-This essentially makes a request to the API for an occurrence where the value within the FORESTNAME field contains the characters 'DAKOTA PRAIRIE' potentially with other characters at the beginning or end.
+This essentially makes a request to the API for an occurrence where the value within the FORESTNAME field contains the characters 'Tahoe National' potentially with other characters at the beginning or end.
 
 Now that we've played with the query page just a bit, let's begin to see how we might implement this in R.  
 
-If you haven't already noticed, each time you hit Query (GET) the URL in the top of your browser updates.  This is your query URL.  We will be using a few libraries within this tutorial for obtaining and view spatial data.
+If you haven't already noticed, each time you hit Query (GET) the URL in the top of your browser updates.  This is your query URL.  We will be using a few libraries within this tutorial for obtaining and viewing spatial data.
 
 ```{r libraries, echo=TRUE,warning=FALSE,message=FALSE}
 library(sf)
@@ -63,7 +63,7 @@ library(dplyr)
 library(urltools)
 ```
 
-Change the format field at the bottom of your page to GeoJSON and make another query.  This time you should be redirected to a page containing the GeoJSON describing the output from your query.  Copy the URL and pass it to geojson_sf()
+Change the **Format** field at the bottom of your page to GeoJSON and make another query.  This time you should be redirected to a page containing the GeoJSON describing the output from your query.  Copy the URL and pass it to geojson_sf()
 
 ```{r read_query, include=TRUE, warning=FALSE}
 forest <- geojson_sf("https://apps.fs.usda.gov/arcx/rest/services/EDW/EDW_ForestSystemBoundaries_01/MapServer/0/query?where=FORESTNAME+LIKE+%27%25Tahoe+National%25%27&text=&objectIds=&time=&geometry=&geometryType=esriGeometryEnvelope&inSR=&spatialRel=esriSpatialRelIntersects&relationParam=&outFields=*&returnGeometry=true&returnTrueCurves=false&maxAllowableOffset=&geometryPrecision=&outSR=&having=&returnIdsOnly=false&returnCountOnly=false&orderByFields=&groupByFieldsForStatistics=&outStatistics=&returnZ=false&returnM=false&gdbVersion=&historicMoment=&returnDistinctValues=false&resultOffset=&resultRecordCount=&queryByDistance=&returnExtentOnly=false&datumTransformation=&parameterValues=&rangeValues=&quantizationParameters=&featureEncoding=esriDefault&f=geojson")
@@ -72,23 +72,23 @@ forest <- geojson_sf("https://apps.fs.usda.gov/arcx/rest/services/EDW/EDW_Forest
 
 Let's take a look at this data!
 
-```{r plot_Tahoe, echo=FALSE}
+```{r plot_Tahoe, echo=TRUE, message=FALSE}
 leaflet() %>%
   addProviderTiles("Esri.WorldStreetMap") %>%
-  addPolygons(data=forest, weight=2)
+  addPolygons(data=forest, weight=2, color="blue")
 ```
 Now let's try querying another Forest Service Esri REST API.  However, this time we'll construct the query from within R.  Let's use the Current Invasive Plant Locations API to get the locations of observed invasive plans that fall within the Tahoe National Forest.
-```{r query_invasive, echo=TRUE, warnings = FALSE, message=FALSE}
+```{r query_invasive, echo=TRUE, warning = F, message=F, results=F}
+#baseURL for  Forest Service invasive species API
+baseURL <- "https://apps.fs.usda.gov/arcx/rest/services/EDW/EDW_InvasiveSpecies_01/MapServer/0/query?"
 #bounding box of taho national forest polygon
 bbox <- st_bbox(forest)
-#convert bounding box to char format
+#convert bounding box to character
 bbox <- toString(bbox)
 #encode for use within URL
 bbox <- urltools::url_encode(bbox)
 #EPSG code for coordinate reference system used by taho national forest polygon sf object
 epsg <- st_crs(forest)$epsg
-#baseURL for  Forest Service invasive species API
-baseURL <- "https://apps.fs.usda.gov/arcx/rest/services/EDW/EDW_InvasiveSpecies_01/MapServer/0/query?"
 
 #set parameters for query
 query <- urltools::param_set(baseURL,key="geometry", value=bbox) %>%
@@ -110,25 +110,31 @@ query <- urltools::param_set(baseURL,key="geometry", value=bbox) %>%
   
 invasives <- geojson_sf(query)
 ```
+Let's take a moment to look through the parameters of our query.  
+
 **geometry**
 
-Let's take a moment to look through the parameters of our query.  The first parameter is the input geometry (geometry), to which pass the bounding box of the taho national forest.  A bounding box is a rectangle represented by four points (xmax, ymax, xmin, ymin) in which a polygon is fully enclosed.  We convert the bounding box to a char, and then pass it to url_encode.  We have to do this because things like spaces and commas are represented within URLs with the ASCII characters.
+The first parameter is the input geometry, to which we pass the bounding box of the Taho National Forest.  A bounding box is a rectangle represented by four points (xmax, ymax, xmin, ymin) in which a spatial object is fully enclosed.  You'll notice that before we pass the bounding box to the API we do a bit of formatting.  First it is converted to the character class with the toString() function.  Then we pass it to url_encode(), this is because things like spaces and commas are represented within URLs with special ASCII character combinations.
 
 **inSR**
 
-We then set the input spatial reference (inSR).  Here we are supplying the API with the coordinate reference system of our polygon.  Without getting into too much detail, a coordinate reference system (commonly reffered to as a CRS) is a reference point which provides context to coordinates (the coordinates of our bounding box in this case).  If you're curious to learn more about coordinate reference systems an excellent explaination can be found [here](https://www.earthdatascience.org/courses/earth-analytics/spatial-data-r/intro-to-coordinate-reference-systems/).  
+We then set the input spatial reference.  Here we are supplying the API with the coordinate reference system of our polygon.  Without getting into too much detail, a coordinate reference system (commonly reffered to as a CRS) is a reference point which provides context to coordinates (the coordinates of our bounding box in this case).  If you're curious to learn more about coordinate reference systems an excellent explaination can be found [here](https://www.earthdatascience.org/courses/earth-analytics/spatial-data-r/intro-to-coordinate-reference-systems/).  
 
 **resultRecordCount**
 
-The next parameter, resultRecordCount, simply dictates how many observations we would like the API to return.  
+This parameter simply dictates how many observations we would like the API to return.  
 
 **spatialRel**
 
-Spatial relationship (spatialRel) given the value "esriSpatialRelIntersects" is stating that we want all observations that intersect with the input geometry, which is the bounding box of our polygon in this case.  
+Spatial relationship, given the value "esriSpatialRelIntersects" is stating that we want all observations that intersect with the input geometry, which is the bounding box of our polygon in this case.  
 
 **f**
 
-format (f) is the format in which our data will be returned.  You remember outFields, this is the parameter which dictates which fields of the dataset will be returned.  We pass an asterisk in order to get all fields.
+format is the file format in which our data will be returned.  
+
+**outFields**
+
+This is the parameter which dictates which fields of the dataset will be returned.  We pass an asterisk in order to get all fields.
 
 We will not go into the remaining parameters, if you'd like to explore them yourself you can do so within the [API reference](https://gis.fws.gov/arcgis/sdk/rest/index.html#//02ss0000006v000000).  The rest of parameters are set at their default value, and if so desired, could have been left within the base URL to avoid so many calls to param_set.  However, for the purposes of this tutorial they were seperated to give a clear representation of parameters versus the base URL.  Let's take a look at our data!
 
@@ -142,7 +148,7 @@ leaflet() %>%
 
 Great!  We have our invasive plant locations, as well as the boundaries to the Taho National Forest.  Except, it seems that we have a decent number of invasive plant observations that fall outside the boundary of the national forest.  If you remember, we passed a bounding box to the API, therefor we got all observations that intersected with the given bounding box rather than the polygon itself.
 
-Let's filter out all of the observations from the invasive plant API that fall outside of the taho national forest polygon.
+Let's filter out all of the observations from the invasive plant API that fall outside of the Taho National Forest polygon.
 ```{r filter_invasives, message=FALSE, echo=TRUE}
 #get sparse matrix showing which rows in invasives intersect with forest
 inRows <- st_intersects(invasives,forest)
@@ -157,5 +163,5 @@ leaflet() %>%
   addPolygons(data=insideInvasives, weight=3, color="red")
 ```
 
-
+And there you have it!  We hope this tutorial has been informative!
 
